# wheel

./: Cargo.toml  README.md  flake.nix
.github/workflows/: docs.yml
assets/: pre-commit.ps1  pre-commit.sh
crate/wheel/: Cargo.toml
crate/wheel-derive/: Cargo.toml
crate/wheel-derive/src/: lib.rs
crate/wheel/src/: fs.rs  github.rs  gui.rs  lib.rs  nixos.rs  traits.rs
