[package]
name = "wheel-derive"
version = "0.6.5"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"
description = "Derive macros for the wheel crate."

[lib]
proc-macro = true

[dependencies]
itertools = "0.10"
proc-macro2 = "1"
quote = "1"

[dependencies.syn]
version = "1"
features = ["full"]
