[package]
name = "wheel-derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Derive macros for the wheel crate."

[lib]
proc-macro = true

[dependencies]
itertools = "0.10"
proc-macro2 = "1"
quote = "1"

[dependencies.syn]
version = "1"
features = ["full"]
