[package]
name = "wheel"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Rust boilerplate. Reinventing the wheel so you don't have to."

[features]
default = ["futures", "tokio"]
racetime = ["dep:racetime", "reqwest", "tungstenite"]
tungstenite = ["async-proto?/tungstenite", "dep:tungstenite"]
rocket-util = ["dep:rocket-util"]

[dependencies]
async-proto = { version = "0.22", optional = true }
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["alloc"], optional = true }
clap = "4" # used in proc macro
futures = { version = "0.3", optional = true }
itertools = "0.13"
racetime = { version = "0.21.5", optional = true }
reqwest = { version = "0.12", default-features = false, optional = true }
rocket = { version = "0.5", optional = true } # used in proc macro
rocket-util = { git = "https://github.com/fenhl/rocket-util", branch = "main", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
thiserror = "1"
tungstenite = { version = "0.21", optional = true }
wheel-derive = { path = "../wheel-derive", version = "=0.14.1" }

[target.'cfg(tokio_unstable)'.dependencies]
console-subscriber = { version = "0.2", features = ["parking_lot"] } # used in proc macro
tokio = { version = "1", features = ["fs", "io-util", "macros", "parking_lot", "process", "rt-multi-thread", "tracing"], optional = true }

[target.'cfg(not(tokio_unstable))'.dependencies]
tokio = { version = "1", features = ["fs", "io-util", "macros", "parking_lot", "process", "rt-multi-thread"], optional = true }
