[package]
name = "wheel"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Rust boilerplate. Reinventing the wheel so you don't have to."

[lints.rust]
missing_docs = "deny"
rust_2018_idioms = "deny"
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(tokio_unstable)'] }
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[features]
default = ["futures", "tokio"]
racetime = ["dep:racetime", "reqwest", "tungstenite021"]
rocket = ["dep:rocket", "rocket-util"]
serde_json = ["serde", "dep:serde_json", "serde_json_path_to_error"]
tungstenite021 = ["async-proto?/tokio-tungstenite021", "dep:tungstenite021"]
tungstenite024 = ["async-proto?/tokio-tungstenite024", "dep:tungstenite024"]

[dependencies]
async-proto = { version = "0.24", optional = true }
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["now"], optional = true }
clap = "4" # used in proc macro
futures = { version = "0.3", optional = true }
itertools = "0.14"
pyo3 = { version = "0.24", optional = true }
racetime = { version = "0.25", optional = true }
reqwest = { version = "0.12", default-features = false, optional = true }
rocket = { version = "0.5", optional = true } # used in proc macro
rocket-util = { git = "https://github.com/fenhl/rocket-util", branch = "main", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
serde_json_path_to_error = { version = "0.1", optional = true }
thiserror = "2"
tungstenite021 = { package = "tungstenite", version = "0.21", optional = true }
tungstenite024 = { package = "tungstenite", version = "0.24", optional = true }
wheel-derive = { path = "../wheel-derive", version = "=0.15.0" }

[target.'cfg(tokio_unstable)'.dependencies]
console-subscriber = { version = "0.4", features = ["parking_lot"] } # used in proc macro
tokio = { version = "1", features = ["fs", "io-util", "macros", "parking_lot", "process", "rt-multi-thread", "tracing"], optional = true }

[target.'cfg(not(tokio_unstable))'.dependencies]
tokio = { version = "1", features = ["fs", "io-util", "macros", "parking_lot", "process", "rt-multi-thread"], optional = true }
